src/index.css
.hidden {
    visibility: hidden !important;
}
.visible {
    visibility: visible !important;
}
div#content {
    max-width: 1200px;
    margin: 0 auto;
    padding-top: 30px;
}

div.imageHolder {
    position: relative;
}
img.chapterImage {
    max-width: 100%;
}
div.image-label {
    position: absolute;
    bottom: 8px;
    right: 16px;
    color: white;
    background: #313131;
    padding: 0 10px;
}
div.paragraphHolder {
    flex-shrink: 8;
}
.section-heading {
    margin-top: 20px;
}
p.paragraph {
    margin: 20px 10px;
}

p {
    margin: 0;
    padding: 0;
}

p.indented {margin-top: 40px;}

h1.chapter-heading {
    padding: 10px 0;
    margin-top: 10px;
    width: 100%;
    background: linear-gradient(#706f6f, #4b4b4b, #4b4b4b);
    text-align: center;
    color: white;
}

span.anchor-link {
    visibility: hidden;
    display: block;
    margin-top: -150px;
    padding-top: 150px;
}

span.chapter-anchor-link {
    visibility: hidden;
    display: block;
    margin-top: -50px;
    padding-top: 50px;
}

div.poem {

}
div.poem h2 {
    padding: 30px 0;
    text-align: center;
}
div.verse-container {
    background: rgba(235,235,235,0.98);
}
div.verse {
    padding: 20px 30px;
    font-style: italic;
}
p.verse-line-first {
    padding-top: 5px;
}
div.last {
}

p.verse-index {
    float: right;
    text-align: right;
    font-family: "serif";
    font-size: 1.2em;
    background: #4b4b4b;
    color: white;
    padding: 0 5px;

}

